--- a/views/user/sign.jade
+++ b/views/user/sign.jade
@@ -12,14 +12,14 @@ html
                             .cont_ba_opcitiy
                                 h2 LOGIN                              
                                    
-                                p Lorem ipsum dolor sit amet, consectetur adipiscing elit.                                 
+                                p We Gon' Float Like a Butterfly, Sting Like a Bee.                                
                                    
                                 button.btn_login(onclick='cambiar_login()') LOGIN
                         .col_md_sign_up
                             .cont_ba_opcitiy
                                 h2 SIGN UP                                   
                                    
-                                p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                p Once That Bell Rings You're on Your Own. It's Just You and the Other Guy.
                                    
                                 button.btn_sign_up(onclick='cambiar_sign_up()') SIGN UP
                          
@@ -147,5 +147,3 @@ html
                         $('#register').submit();
                 }
             })
-
-            
